Ajustes de servidor de back
Ajustes de repositorio

--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon app.mjs",
-    "test": "mocha tests"
+    "test": "mocha tests",
+    "start":"node app.mjs"
   },
   "license": "ISC",
   "dependencies": {
