--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.3.0",
     "@splidejs/splide": "^4.1.4",
     "chart.js": "^4.4.2",
+    "multer": "^1.4.5-lts.2",
     "ng2-charts": "^6.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.6.13",
